--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -4,3 +4,10 @@
     background-color: rgb(255, 255, 255);
     
 }
+.homewidgets{
+display: flex;    
+padding: 20px;
+
+    background-color: rgb(255, 255, 255);
+    justify-content: space-between;
+}
